k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: days-app-ingress
  namespace: sample
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: static-web-service
                port:
                  number: 80
